Completa formulario de crear comando en cliente
